@@ -49,6 +49,7 @@ INSTALLED_APPS = (
     'allauth.socialaccount.providers.github',
     'allauth.socialaccount.providers.instagram',
     'allauth.socialaccount.providers.linkedin',
+    'allauth.socialaccount.providers.linkedin_oauth2',
     'allauth.socialaccount.providers.openid',
     'allauth.socialaccount.providers.persona',
     'allauth.socialaccount.providers.soundcloud',
