@@ -1,3 +1,7 @@
+2013-12-04  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* Stuart Ross contributed LinkedIn OAuth 2.0 support, thanks!
+
 2013-12-01  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Version 0.15.0 released.
